--- a/Stage11/style.css
+++ b/Stage11/style.css
@@ -46,7 +46,7 @@ header h1{
 	width: 100%;
 }
 
-.home-page nav ul{
+.home-page nav ul,.tag ul{
 	display: flex;
 	list-style: none;
 	font-size: 16px;
@@ -72,11 +72,6 @@ header h1{
 	margin: .4rem .4rem;
 }
 
-.tag ul{
-	display: flex;
-	list-style: none;
-	font-size: 16px;
-}
 
 .tag ul li{
 	line-height: 2rem;
@@ -98,7 +93,6 @@ header h1{
 	text-align: center;
 	height: 10rem;
 	padding: 1rem 0;
-	justify-content: space-between;
 	border-top: .2rem solid #EEEEEE;
 	border-bottom: .8rem solid #e0e0e0;
 }
@@ -118,11 +112,11 @@ header h1{
 	vertical-align: middle;
 }
 
-.column1, .column2{
+.column1{
 	border-right: .2rem solid #EEEEEE; 
 }
 
-.module1, .module2{
+.module1{
 	padding: 0 .8rem 0;
 	border-bottom: .8rem solid #EEEEEE;
 }
@@ -178,10 +172,6 @@ header h1{
 	justify-content: space-between;
 }
 
-/*.art{
-	width: 100%;
-}*/
-
 .article1{
 	display: flex;
 	height: 6rem;
@@ -194,8 +184,7 @@ header h1{
 	margin-right: 1rem;
 }
 
-.art1 h3, .art2 h3{
-	margin: 0;
+.art1 h3, .art2 h3,.article2 h3{
 	font-size: 22px;
 }
 
