--- a/Stage9/css/style.css
+++ b/Stage9/css/style.css
@@ -26,7 +26,7 @@ header{
 	width: 250px;
 	height: 30px;
 	border-radius: 15px;
-	background: #fff url(../zoom.png) no-repeat 13px 8px;
+	background: #fff url(../img/zoom.png) no-repeat 13px 8px;
 }
 
 .top-login button{
@@ -41,7 +41,6 @@ header{
 .container{
 	width: 1440px;
 	margin: 0 auto;
-	/*border: 1px solid;*/
 }
 
 nav{
@@ -89,8 +88,9 @@ nav{
 }
 
 .data-l{
+	box-sizing: border-box;
 	float: left;
-	padding: 0px 25px 0 30%;
+	padding: 0px 5% 0 30%;
 	border-right: 2px solid #1D2560;
 }
 
@@ -105,7 +105,7 @@ nav{
 
 .m-banner ul{
 	list-style: none;
-	font: 18px "SimHei",sans-serif;
+	font-size: 18px;
 }
 
 .m-banner>ul>li{
@@ -132,7 +132,7 @@ nav{
 
 .container{
 	background-color: #eeeeed;
-	height: 1080px;
+	/*height: 1080px;*/
 }
 
 section{
@@ -257,8 +257,6 @@ h3,p{
 }
 
 .title{
-	width: 100%;
-	height: 40px;
 	text-indent: 27px;
 	line-height: 40px;
 	background-color: #F5F5F5;
@@ -273,7 +271,7 @@ h3,p{
 .select-time select{
 	padding: 4px;
 	margin: 10px 0 10px 10px;
-	font: 16px "SimHei",sans-serif;
+	font-size: 16px;
 	border: 1px solid #E0E0E0;
 }
 
@@ -281,9 +279,9 @@ h3,p{
 	border: 1px solid #E0E0E0;
 	background: #fff;
 	margin: 10px 10px 0px 0;
-	font: 16px "SimHei",sans-serif;
+	font-size: 16px;
 	vertical-align: top;
-	padding: 4.5px 10px;
+	padding: 5px 10px;
 }
  
 .month table{
@@ -307,7 +305,6 @@ h3,p{
 	display: block;
 	text-align: center;
 	width: 55.8px;
-	height: 25px;
 	line-height: 25px;
 	cursor: pointer;
 }
@@ -358,7 +355,8 @@ h3,p{
 }
 
 .text2{
-	width: 199px;
+	box-sizing: border-box;
+	width: 200px;
 	border-right: 1px solid #E0E0E0;
 }
 
@@ -407,4 +405,5 @@ h3,p{
 	color: #fff;
 	font: 16px "SimHei",sans-serif;
 	background-color: #2189bf;
+	cursor:pointer;
 }
