--- a/Stage7/style.css
+++ b/Stage7/style.css
@@ -2,7 +2,7 @@
 
 body{
 	margin: 0;
-	width: 1440px;
+	width: 100%;
 	margin: 0 auto;
 }
 
@@ -39,15 +39,22 @@ header .logo1 img{
 nav ul{
 	margin: 0;
 	list-style: none;
-	height: 60px;
 }
 
+nav ul:after{
+	content: "";
+	display: block;
+	clear: both;
+	visibility: none;
+	height: 0;
+}
 nav ul li{
 	float: right;
 	padding:  18px 10px;
 	vertical-align: middle;
 	color: gray;
 	font-size: 14px;
+	letter-spacing: 1px;
 }
 
 nav ul li a{
@@ -68,8 +75,6 @@ nav ul a:hover{
 nav ul li:first-child{
 	padding-right: 75px;
 	padding-left:18px; 
-	margin-left: 10px;
-	color: rgb(231,79,77);
 	background: url(login-logo.png) no-repeat  0% 50%;
 	background-size: 20px 20px;
 	font-weight: bold;
@@ -94,7 +99,7 @@ nav ul li:first-child{
 	position: absolute;
 	top: 0;
 	left: 0;
-	padding: 250px 0 0 200px;
+	padding: 250px 0 0 15%;
 }
 
 .start-text p:first-child{
@@ -128,37 +133,17 @@ nav ul li:first-child{
 	color: inherit;
 	text-decoration: none;
 	display: inline;
-	/*padding: 15px 90px;*/
-	/*margin: 15px 90px;*/
 }
 
 .detail{
 	width: 100%;
-	/*height: 323px;*/
 	position: relative;
-
 	overflow: hidden;
 }
 
-.detail1{
+.detail1,.detail2,.detail3{
 	width: 25%;
-	/*border:1px solid;*/
 	float: left;
-	/*box-sizing: border-box;*/
-}
-
-.detail2{
-	width: 25%;
-	/*border:1px solid;*/
-	float: left;
-	/*box-sizing: border-box;*/
-}
-
-.detail3{
-	width: 25%;
-	/*border:1px solid;*/
-	float: left;
-	/*box-sizing: border-box;*/
 }
 
 .detail4{
@@ -170,7 +155,7 @@ nav ul li:first-child{
 .detail p{
 	width: 80%;
 	text-align: center;
-	margin: 20% auto;
+	margin: 10% auto 20%;
 	padding:0 10%;
 	border-right: 2px solid gray;
 	font-family: "黑体";
@@ -183,7 +168,6 @@ nav ul li:first-child{
 
 .intro{
 	height: 400px;
-	/*border: 1px solid;*/
 	margin: 0 auto;
 	background-color: #eee;
 }
@@ -205,15 +189,26 @@ nav ul li:first-child{
 }
 
 .find-aci{
-	width: 100%;
-	height: 341px;
-	background: url(map.png) no-repeat;
+	height: 541px;
 	background-size: 100% 341px;
+	position: relative;
+}
+
+.find-aci img{
+	width: 100%;
+	min-height: 541px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: -1;
+}
+
+.find-text{
+	padding-top: 50px; 
 }
 
 .find-aci p{
 	text-align: center;
-	margin:0 auto;
 	color: #f5f5f5;
 	letter-spacing: 1px;
 }
@@ -231,29 +226,391 @@ nav ul li:first-child{
 .select{
 	text-align: center;
 	margin: 60px auto;
+	overflow: hidden;
 }
 
 .select select{
 	outline: 0;
-	padding: 10px 200px 10px 10px;
-	/*appearance:none;*/
+	padding: 0 0 0 10px;
+	margin: 0 10px 0 10px;
+	width: 237px;
+	height: 37px;
 	-moz-appearance:none;
     -webkit-appearance:none;
     border: 0;
-    background: url(select.png) no-repeat right center transparent;
-}
-
-.select option{
-	display: inline-block;
-	padding: 10px 200px 10px 10px;
-	width: 237px;
-	height: 37px;
-	background: red;
+    /*background: url(select.png) no-repeat right center;*/
+    /*这里出现了一个问题，用上面那一行select的高度会比button小*/
+    background: url(select.png) no-repeat right #fff;
+    line-height: 37px;
 }
 
 .select button{
 	width: 237px;
-	height: 38.4px;
+	height: 37px;
+	margin-left: 20px;
 	padding: 0;
 	border: 0;
+	background-color: rgb(231,79,77);
+	color: #fff;
+	letter-spacing: 10px;
+	font-family: "黑体";
+}
+
+.city{
+	background: #eee;
+}
+
+.allcity{
+	overflow: hidden;
+	width: 1050px;
+	margin: 0 auto;
+	padding: 7% 0;
+}
+
+.allcity p{
+	font-size: 16px;
+	text-align: center;
+	margin-top: 8px;
+	color: #757575;
+}
+
+.beijing, .shanghai, .shenzhen, .hongkong{
+	float: left;
+	margin: auto 20px; 
+}
+
+.city img{
+	padding: 12px 8px;
+	background-color: #fff;
+	border: 1px solid #bdbdbd;
+}
+
+.beijing p:nth-child(2), .shanghai p:first-child, .shenzhen p:nth-child(2), .hongkong p:nth-child(2){
+	font-size: 22px;
+	color: black;
+	margin-bottom: 0; 
+}
+
+.more-top{
+	position: relative;
+	overflow: hidden;
+}
+.top-left{
+	float: left;
+	width: 70%;
+}
+
+.top-left img{
+	width: 100%;
+	display: block;
+}
+.top-left .text{
+	position: absolute;
+	top: 26%;
+	left: 25%;
+	color: #fff;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.text p:first-child{
+	font-size: 4em;
+	margin: 0;
+}
+
+.text p:nth-child(2){
+	font-size: 10em;
+	margin: 0;
+	padding: 0;
+}
+
+.triangle1{
+	position: absolute;
+	right: 0;
+	top: 48%;
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-right: 30px solid #fff;
+    border-bottom: 15px solid transparent;
+}
+
+.top-right{
+	text-align: center;
+	width: 30%;
+	position: absolute;
+	top: 30%;
+	left: 70%;
+}
+
+.right-text{
+	width: 400px;
+	margin: 0 auto;
+}
+
+.right-text span{
+	color: rgb(231,79,77);
+	font-weight: bold;
+
+}
+
+.right-text p:first-child{
+	font: 36px "黑体";
+}
+
+.right-text p:nth-child(2){
+	font: 16px "宋体";
+	line-height: 1.5em;
+}
+
+.top-right button{
+	border: 0;
+	margin: 10% 0;
+	padding: 20px 100px;
+	background-color: rgb(231,79,77);
+	color: #fff;
+	font-size: 22px;
+	letter-spacing: 2px;
+}
+
+.more-bottom{
+	position: relative;
+	overflow: auto;
+	font-size: 24px;
+}
+
+.bottom-left{
+	float: left;
+	width: 35%;
+	height: 521px;
+	background-color:rgb(231,79,77);
+	text-align: center;
+	color: #fff;
+}
+
+.bottom-center{
+	float: left;
+	width: 35%; 
+	height: 521px;
+	text-align: center;
+}
+
+.bottom-right{
+	float: right;
+	width: 30%;
+}
+
+.bottom-right img{
+	width: 100%;
+	height: 521px;
+	display: block;
+}
+
+.more-bottom p{
+	margin: 0;
+}
+
+.more-bottom p:first-child{
+	margin: 200px auto 10px;
+}
+
+.more-bottom button{
+	margin-top: 30px;
+	padding: 10px 80px;
+	border: none;
+}
+
+.bottom-left button{
+	background-color: rgb(231,79,77);
+	border: 1px solid #fff;
+	color: #fff;
+	font-size: 18px;
+	letter-spacing: 2px;
+}
+
+.bottom-center button{
+	background-color: #fff;
+	border: 1px solid rgb(231,79,77);
+	color: rgb(231,79,77);
+	font-size: 18px;
+	letter-spacing: 2px;
+}
+
+.join-top{
+	width: 470px;
+	padding: 120px 0; 
+	margin:0 auto; 
+} 
+
+.join-top p{
+	text-align: center;
+}
+
+.join-top p:first-child{
+	font-size: 22px;
+	margin-bottom:0; 
+}
+
+.join-top p:nth-child(2){
+	color: rgb(231,79,77);
+	margin: 0;
+	font-weight: 900;
+}
+
+.join-top p:nth-child(3){
+	font-size: 14px;
+	color: #757575;
+	margin-top: 0;
+	line-height: 1.8em;
+}
+
+.join-bottom{
+	width: 80%;
+	height: 600px;
+	margin: 0 auto;
+}
+
+.join-bottom-left{
+	width: 35%;
+	float: left;
+}
+
+.left1, .left2, .left3{
+	margin: 60px 35px;
+	line-height: 1.5em;
+
+}
+
+.join-bottom-left button{
+	border: none;
+	background-color: #fff;
+	background: url(more.jpg) no-repeat left;
+	padding: 5px 15px;
+	display: inline-block;
+	text-align: right;
+	float: right;
+	color: #757575;
+}
+
+.left1 p:nth-child(2), .left2 p:nth-child(2){
+	font-size: 16px;
+	margin: 5px 0;
+	color: #757575;
+}
+
+.left1 p:nth-child(1), .left2 p:nth-child(1), .left3 p:nth-child(1){
+	font-weight: 500;
+	font-size: 20px;
+	color: #616161;
+}
+
+.join-bottom-right{
+	width: 65%;
+	float: left;
+	margin: 60px auto;
+	font-size: 0;
+}
+
+.text1, .text2, .text3, .text4{
+	width: 40%;
+	height: 50px;
+	margin: 10px 2%;
+	padding: 0;
+	border: none;
+	resize: none;
+	background-color: #e0e0e0;
+
+
+}
+
+textarea::-webkit-input-placeholder {  
+    color: black;  
+    font-size: 16px;
+    text-indent: 12px;
+    padding-top: 12px;
+}  
+
+.text5{
+	width: 84%;
+	height: 160px;
+	margin: 10px 0 10px 2%;
+	padding: 0;
+	border: none;
+	resize: none;
+	background-color: #e0e0e0;
+}
+
+.join-bottom-right button{
+	width: 84%;
+	height: 50px;
+	margin: 10px 0 10px 2%;
+	border: 0;
+	background-color: #e0e0e0;
+	font-size: 16px;
+	letter-spacing: 2px;
+}
+
+.footer-top{
+	background-color: #334;
+	color: white;
+}
+
+.text-wrapper{
+	text-align: center;
+	width: 450px;
+	margin:0 auto;
+	padding: 5% 0; 
+}
+
+.text-wrapper p:first-child{
+	font-size: 38px;
+	margin: 10px 0;
+}
+
+.text-wrapper input{
+	width: 60%;
+	height: 50px;
+	padding: 0;
+	border: 0;
+	vertical-align:bottom;
+	font-size: 18px;
+	text-indent: 4px;
+}
+
+.text-wrapper button{
+	width: 30%;
+	height: 50px;
+	padding: 0;
+	border: 0;
+	font-size: 18px;
+}
+
+
+.link-us img{
+	padding: 40px 0; 
+	margin:0 25px;
+}
+
+.footer-bottom{
+	height: 100px;
+	background-color: #223;
+	color: white;
+	width: 100%;
+	position: relative;
+}
+
+.footer-bottom span{
+	position: absolute;
+	left: 50px;
+	top: 40px;
+	font-size: 20px;
+}
+
+.footer-bottom a{
+	position: absolute;
+	right: 50px;
+	top: 40px;
+	text-decoration: none;
+	color: white;
+	font-size: 20px;
 }
